# datev-api-client

./: .gitignore  README.md  requirements.txt  streamlit_app.py
api_docs/: streamlit_login.md  (+1 more)
datev-datenservice-dokumente-personalwirtschaft-rest-api-client/: README.md  pyproject.toml
datev-datenservice-dokumente-personalwirtschaft-rest-api-client/datev_datenservice_dokumente_personalwirtschaft_rest_api_client/: __init__.py
datev-datenservice-dokumente-personalwirtschaft-rest-api-client/datev_datenservice_dokumente_personalwirtschaft_rest_api_client/api/external_api/: get_client_by_consultant_client_number.py  get_clients.py  upload_document.py  (+1 more)
datev-datenservice-dokumente-personalwirtschaft-rest-api-client/datev_datenservice_dokumente_personalwirtschaft_rest_api_client/models/: __init__.py  additional_message.py  additional_message_severity.py  client.py  clients_response.py  error_message.py  upload_document_body.py  upload_document_by_consultant_client_number_body.py
hrexports-client/: README.md  pyproject.toml
hrexports-client/hrexports_client/: __init__.py
hrexports-client/hrexports_client/models/: __init__.py  absences.py  client.py  cost_center.py  employee_address.py  employee_ids.py  employment.py  error_message.py  error_message_5_xx.py  gross_payments_lodas.py  gross_payments_lug.py  health_insurance.py  long_term_care_insurance.py  master_data.py  net_payments.py  pension_insurance.py  personal_data.py  salary_payments.py  salary_total_values.py  social_security.py  social_security_payments.py  tax_payments.py  taxes.py  unemployment_insurance.py
(+318 files in other folders)
